# microkanren-hs

./: README.md  microkanren-hs.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/0b542afa/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/3894c8fccbe0db20ea4a9812a208a0579359afe38ecc2202f8efcb360075e07f/8.10.4/doc/microkanren-hs-0.1.0.0/: LICENSE
src/: Main.hs
