name:                microkanren-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickcsullivan/microkanren-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Sullivan
maintainer:          patrick.sullivan@hey.com
copyright:           2021 Patrick Sullivan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable microkanren-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
